Fixing profile pic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://scontent.fsan1-1.fna.fbcdn.net/v/t39.30808-6/292291884_10223552671148522_3727251190113407041_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=S-euhdybj-oAX89rjbB&_nc_ht=scontent.fsan1-1.fna&oh=00_AfDDBOnARVApBUaz_hHHwCOutz157gWCwZL6nnp10CpwNw&oe=640C2529"  alt="Tyler Profile Picture"></td>
+            <td><img src="TyLeela.jpg"  alt="Tyler Profile Picture"></td>
             <td><h1>Tyler Robinson</h1>
                 <p><h2> <em>Propsective Software Developer</em></h2></p>
                 <p><h2><em>Father of <strong>Leela and Zeus</strong></em></h2></p>
