--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="TyLeela.jpg"  alt="Tyler Profile Picture"></td>
+            <td><img src="TyLeela2.png"  alt="Tyler Profile Picture"></td>
             <td><h1>Tyler Robinson</h1>
                 <p><h2> <em>Propsective Software Developer</em></h2></p>
                 <p><h2><em>Father of <strong>Leela and Zeus</strong></em></h2></p>
