--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <head>
     <meta charset="UTF-8">
    <title>Tyler's Personal Site</title>
+   <link rel="stylesheet" href="css/styles.css">
 
-   <style>
-
-        body {
-            background-color: #5fef5f;            
-        }
-        hr {
-            background-color: rgb(74, 21, 233);
-            border-style: dotted none none;
-            border-width: 5px;
-            
-            height: 0px;
-        }
-
-
-   </style>
 </head>
 <body>
     <table cellspacing="20">
