--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Where to find me</h1>
@@ -17,13 +18,13 @@
     
     <h1><a href="Index.html">Home</a></h1>
 
-    <form class="" action="mailto:typhoon@baloon.com" method="post">
+    <form  action="mailto:typhoon@baloon.com" method="post" enctype="text/plain">
        <label >Your Name:</label>
-       <input type="text" name="" id=""><br>
+       <input type="text" name="yourName" id=""><br>
        <label for="">Your Email:</label>
-       <input type="email" name="" id=""><br>
+       <input type="email" name="yourEmail" id=""><br>
        <label for="">Add a Message:</label><br>
-       <textarea name="Name" id="" cols="30" rows="10"></textarea><br>
+       <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
        <input type="submit" name="" id="">
     </form>
 </body>
